# Syntract

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  batch_ants_trk_registration.py  cumulative.py  patch_extract.py  pyproject.toml  requirements.txt  run_comprehensive_tests.py  setup.py  syntract.py
.github/workflows/: python-package.yml
SynTract.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
examples/example_data/: motor.trk  sub-MF278_sample-brain_desc-dwi_to_blockface_0GenericAffine.mat
nifti_trk_vis/: generate_fiber_examples.py  nifti_trk_slice_viewer.py
src/: __init__.py  ants_transform.py  compare_interpolation.py  densify.py  main.py  nifti_preprocessing.py  nifti_trk_slice_viewer.py  streamline_processing.py  transform.py  visualize.py
synthesis/: __init__.py  ants_transform.py  ants_transform_updated.py  compare_interpolation.py  densify.py  gpu_utils.py  main.py  nifti_preprocessing.py  patch_first_processing.py  slice_selection.py  slice_simplified.py  streamline_processing.py  transform.py  validation.py  visualize.py
syntract_viewer/: __init__.py  background_enhancement.py  contrast.py  core.py  cornucopia_augmentation.py  effects.py  generate_fiber_examples.py  generation.py  improved_cornucopia.py  masking.py  orange_blob_generator.py  patch_extraction.py  utils.py
tests/: conftest.py  test_comprehensive_integration.py  test_densify.py  test_main.py  test_nifti_preprocessing.py  test_streamline_processing.py  test_synthesis_complete.py  test_syntract_viewer_complete.py  test_transform.py
